fixing a few shift selection errors

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,6 +56,15 @@ h1 {
   font-size: 2.25rem;
 }
 
+.dropdown-item:active {
+  color: #000 !important;
+  background-color: #497979 !important;
+}
+
+.dropdown-item:hover {
+  background-color: rgba(59, 147, 147, 0.2) !important;
+}
+
 h2 {
   font-size: 1.75rem;
 }
